--- a/client/style.css
+++ b/client/style.css
@@ -78,6 +78,12 @@ p {
   align-items: flex-end;
 }
 
+.message--bot {
+  color:rgb(68, 68, 68);
+  font-style: italic;
+  font-size: 0,6rem;
+}
+
 .message--received {
     animation: fadeIn;
     animation-duration: 3s;
